--- a/src/main/webapp/app/entities/tax-information/tax-information-update.component.html
+++ b/src/main/webapp/app/entities/tax-information/tax-information-update.component.html
@@ -112,7 +112,7 @@
                 </button>
 
                 <button type="submit" id="save-entity" [disabled]="editForm.invalid || isSaving" class="btn btn-primary">
-                    <fa-icon icon="save"></fa-icon>&nbsp;<span>Save</span>
+                    <fa-icon icon="save"></fa-icon>&nbsp;<span>Calculate</span>
                 </button>
             </div>
         </form>
